docs/website/src/main/resources/certifications/jakarta-faces/2.3/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Server Faces.

# Mojarra 2.3.9, as delivered in Eclipse GlassFish 5.1, Full Profile, Certification Request

- Product Name, Version and download URL (if applicable) \
  Eclipse GlassFish 5.1, includes: Jakarta Server Faces 2.3.1 with Mojarra 2.3.9
  [Eclipse GlassFish 5.1](https://www.eclipse.org/downloads/download.php?file=/glassfish/glassfish-5.1.0.zip)
- Specification Name, Version and download URL \
  [Jakarta Server Faces, 2.3](https://jakarta.ee/specifications/faces/2.3)
- TCK Version, digital SHA-256 fingerprint and download URL \
*  [Jakarta Server Faces 2.3, TCK](http://download.eclipse.org/ee4j/jakartaee-tck/jakartaee8-eftl/promoted/eclipse-faces-tck-2.3.0.zip), SHA-256: `db9a385010cd8544bc1f2468a1fbcaca16f14014fa341e5343c487616f8670dc`
- Public URL of TCK Results Summary \
  [TCK results summary](TCK-Results.html)
- Any Additional Specification Certification Requirements \
  None
- Java runtime used to run the implementation \
  Oracle JDK 1.8.0_191
- Summary of the information for the certification environment, operating system, cloud, ... \
  Linux Centos 7

Test results:

```
[javatest.batch] ********************************************************************************
[javatest.batch] Completed running 5525 tests.
[javatest.batch] Number of Tests Passed      = 5525
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
[javatest.batch] ********************************************************************************
```