docs/website/src/main/resources/certifications/jakarta-faces/3.0/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Server Faces.

# Eclipse Mojarra 3.0.0, Certification Summary

- Product Name, Version and download URL (if applicable): <br/>
  Eclipse Mojarra 3.0.0, provides Jakarta Server Faces 3.0
  [Eclipse Mojarra Project](https://github.com/eclipse-ee4j/mojarra/releases/download/3.0.0-RC5-RELEASE/jakarta.faces-3.0.0-RC5.jar)
- Specification Name, Version and download URL: <br/>
  [Jakarta Server Faces, 3.0](https://jakarta.ee/specifications/faces/3.0)
- TCK Version, digital SHA-256 fingerprint and download URL: <br/>
  [Jakarta Server Faces 3.0, TCK](https://download.eclipse.org/ee4j/jakartaee-tck/jakartaee9-eftl/promoted/jakarta-faces-tck-3.0.0.zip), SHA-256: `67e7acb555ac2c8955b4157118ef86a5fbb57fb9a65e3d0d75992ec83004204e`
- Public URL of TCK Results Summary: <br/>
  [TCK results summary](TCK-Results.html)
- Any Additional Specification Certification Requirements: <br/>
  None
- Java runtime used to run the implementation: <br/>
  Oracle JDK 1.8.0_202
- Summary of the information for the certification environment, operating system, cloud, ...: <br/>
  Alpine Linux v3.12

Test results:

```
[javatest.batch] ********************************************************************************
[javatest.batch] Completed running 5525 tests.
[javatest.batch] Number of Tests Passed      = 5525
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
[javatest.batch] ********************************************************************************
```

```
BUILD SUCCESSFUL
Total time: 136 minutes 33 seconds
SHA256_IMPL=f0de1f4b119e54dcb04459de8cdac3835b79e8f2859e570a496e11d3be198aff
SHA256_TCK=67e7acb555ac2c8955b4157118ef86a5fbb57fb9a65e3d0d75992ec83004204e
Product_download=https://download.eclipse.org/ee4j/glassfish/weekly/glassfish-6.0.0-SNAPSHOT-2020-10-04.zip
IMPL_download=https://jakarta.oss.sonatype.org/content/repositories/staging/org/glassfish/jakarta.faces/3.0.0-RC5/jakarta.faces-3.0.0-RC5.jar
TCK_download=https://download.eclipse.org/ee4j/jakartaee-tck/jakartaee9-eftl/staged-900/jakarta-faces-tck-3.0.0.zip
OS4=3.12.0 NAME="Alpine Linux" ID=alpine VERSION_ID=3.12.0 PRETTY_NAME="Alpine Linux v3.12" HOME_URL="https://alpinelinux.org/" BUG_REPORT_URL="https://bugs.alpinelinux.org/"
JDK_VERSION=java version "1.8.0_202" Java(TM) SE Runtime Environment (build 1.8.0_202-b08) Java HotSpot(TM) 64-Bit Server VM (build 25.202-b08, mixed mode)
```